# python-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  cheatsheet.py  cheatsheet_extra.py  cheatsheet_geometry.py  cheatsheet_tests.py  environment-dev.yaml  pre-commit-config.yml  pyproject.toml  utils_torch.py
custom/: cheatsheet.py  geometry.py  ipython.py  print.py
custom/plot_times/: plot_times.py
custom/plot_times/find-numbers-in-intervals/: find-numbers-in-intervals.py
custom/plot_times/pandas-indexing/: pandas-indexing.py  plot_times_pandas-indexing-comparison.pkl
custom/plot_times/unique-with-backmap/: unique-with-backmap.py
custom_batched/: geometry.py
guides/: Git.md  Gitignore_template  Mamba.md  PowerShell.md  Uv.md  WSL.md  WSL_with_CUDA.md  usb.md  uv.md
modules/: bisect.py  logging.py  math.py  matplotlib.py  numpy.py  pytorch3d.py  pytorch_lightning.py  rtree.py  scipy.py  subprocess.py  time.py  timeit.py  torch.py
modules_batched/: math.py  scipy.py  sklearn.py  torch.py
plot_times/: find-numbers-in-intervals.py  plot_times.py  plot_times_find-numbers-in-intervals.pkl
plot_times/find-numbers-in-intervals/: find-numbers-in-intervals.py
plot_times/unique-with-backmap/: plot_times_unique-with-backmap.pkl  unique-with-backmap.py
profiling/: __init__.py  plot_times.py
profiling/find_numbers_in_intervals/: find_numbers_in_intervals.py
profiling/groupby/: groupby.py  plot_times_groupby-comparison.pkl
profiling/pandas_indexing/: pandas_indexing.py
profiling/unique_np/: plot_times_numpy-unique-comparison.pkl  unique_np.py
profiling/unique_torch/: unique_torch.py
python_utils/custom/: bootstrapping.py  cheatsheet.py  confidence.py  geometry.py  graphics.py  init.py  ipython.py  metrics.py  print.py
python_utils/custom/plot_times/: plot_times.py
python_utils/custom/plot_times/find-numbers-in-intervals/: find-numbers-in-intervals.py
python_utils/custom/plot_times/find_numbers_in_intervals/: find_numbers_in_intervals.py  plot_times_find-numbers-in-intervals.pkl
python_utils/custom/plot_times/pandas_indexing/: pandas_indexing.py
python_utils/custom/plot_times/unique_np/: plot_times_numpy-unique-comparison.pkl  unique_np.py
python_utils/custom/plot_times/unique_torch/: plot_times_pytorch-unique-comparison.pkl  unique_torch.py
python_utils/custom_batched/: geometry.py  geometry_conversion.py  geometry_numpy.py  geometry_torch.py  graphics.py
python_utils/modules/: bisect.py  concurrent.py  lightning.py  logging.py  math.py  matplotlib.py  numpy.py  pandas.py  pathlib.py  pydantic.py  pytorch3d.py  pytorch_lightning.py  rtree.py  s3fs.py  scipy.py  subprocess.py  time.py  timeit.py  torch.py  tqdm.py
python_utils/modules_batched/: math.py  numpy.py  random.py  scipy.py  sklearn.py  torch.py
tests/: __init__.py
tests/custom/: cheatsheet.py  geometry.py  graphics.py  metrics.py
tests/custom/init/: init.py
tests/custom/init/folder/: file.py
tests/custom_batched/: geometry.py  geometry_conversion.py  graphics.py
tests/modules/: lightning.py  math.py  numpy.py  pandas.py  pytorch3d.py  s3fs.py  time.py  torch.py  tqdm.py
tests/modules/tqdm/: __init__.py  tqdm.py
tests/modules_batched/: sklearn.py  torch.py
utils/custom/: cheatsheet.py
utils/modules/: pathlib.py  scipy.py
