[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_utils"
description = "A place to store general, reusable functions and algorithms."
readme = "README.md"
license = { file = "LICENCE.md" }
authors = [{ name = "Erik Buis" }]
requires-python = ">= 3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Development tools
dev = ["pre-commit", "ipython", "ipykernel", "pytest"]

# Logging
logging = ["tqdm", "loguru"]

# PyTorch
pytorch = [
    "pytorch",
    "torchvision",
    "torchaudio",
    "pytorch-cuda",
    "lightning",
    "tensorboard",
]

# PyTorch3D
pytorch3d = ["pytorch3d", "fvcore", "iopath"]

# Scientific
scientific = ["numpy", "scipy", "matplotlib", "rtree"]

# Database manipulation
database = ["pandas"]

# Geospatial data
geospatial = ["geopandas", "shapely"]

[tool.setuptools]
packages = ["python_utils"]

[tool.setuptools.dynamic]
version = { attr = "python_utils.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests/**/*.py"]
