[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_utils"
description = "A place to store general, reusable functions and algorithms."
readme = "README.md"
license = { file = "LICENCE.md" }
authors = [{ name = "Erik Buis" }]
requires-python = ">= 3.10, < 3.12"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.12.2"]

[dependency-groups]
dev = [
    "pre-commit",
    "ipykernel",
    "ipython",
    "pytest",
    "pylint",
    "line-profiler",
]
logging = ["loguru>=0.7.3", "tqdm>=4.67.1"]
pydantic = ["pydantic>=2.10.6"]
pytorch = [
    "lightning>=2.5.0.post0",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
scientific = [
    "matplotlib>=3.9.4",
    "numpy>=2.1.0",
    "rtree>=1.3.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
]
database = ["pandas>=2.2.3"]
geospatial = ["geopandas>=1.0.1", "shapely>=2.0.6", "pyarrow>=24.0.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
include = ["python_utils*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "python_utils.__version__" }

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--ignore=python_utils/custom/init.py"]
doctest_optionflags = ["NORMALIZE_WHITESPACE"]
testpaths = ["tests/**/*.py", "python_utils/**/*.py"]
